# pandora

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: workflow.yml
archive/: c01_ingestion.py  c02_canonicalization.py  c03_metadata.py  c04_curation.py  c05_splitting.py  c06_provenance.py
archive/schemas/: c01_ingestion.py  c02_canonicalization.py  c03_metadata.py  c04_curation.py  c05_splitting.py  c06_provenance.py
components/: 01-ingestionLayer.md  02-canonicalisation.md  03-metadata.md  04-curation.md  05-leakagefree.md  06-provenance.md  README.md
contribute/: index.html
datasets/dev/: manifest.json
docs/: contribute.md  examples.md  index.md  policies.md  recipies.md  reference.md
examples/: canonicalisation.yaml  index.html  overview.py
examples/c01/: README.md  fetch_single_entry.py  ingest_batch.py
examples/c02/: README.md  canonicalize.py
examples/c03/: README.md  attach_metadata.py
examples/c04/: README.md  build_dataset.py
examples/c05/: README.md  create_splits.py
examples/c06/: README.md  finalize_artifact.py
examples/mmcif/: 1cbs.cif
overrides/partials/: comments.html
pandora/: __init__.py  c01_ingestion.py  c02_canonicalization.py  c03_metadata.py  c04_curation.py  c05_splitting.py  c06_provenance.py  canonicalization.py  ingestion.py  parsing.py
pandora/annotations/: __init__.py  base.py  entry.py  pairwise.py  plugins.py
pandora/canonicalisation/: __init__.py  altlocs.py  assemblies.py  canonicalise.py  chain_ids.py  entities.py  ligands.py  residues.py  validation.py
pandora/canonicalization/: __init__.py  altlocs.py  assemblies.py  canonicalize.py  chain_ids.py  entities.py  ligands.py  missing_data.py  pipeline.py  residues.py  validation.py
pandora/cli/: README.md  __init__.py  _writers.py  app.py  c01.py
pandora/datasets/: __init__.py  curation.py  records.py
pandora/ingestion/: __init__.py  cache.py  mmcif.py  pdb.py  policy.py
pandora/io/: __init__.py  cache.py  mmcif.py  mmcif_fetch.py  pdb.py
pandora/metadata/: __init__.py  collect.py  external.py  mmcif.py  utils.py
pandora/parsing/: __init__.py  adapters.py  mmcif.py
pandora/provenance/: __init__.py  checksums.py  manifest.py
pandora/schemas/: __init__.py  annotation.py  c01_ingestion.py  c02_canonicalization.py  c03_metadata.py  c04_curation.py  c06_provenance.py  canonicalisation.py  canonicalization.py  common.py  dataset.py  ingestion.py  metadata.py  provenance.py  similarity.py  structure.py
pandora/similarity/: __init__.py  clustering.py  partition.py  sequence.py  structure.py
policies/: annotation.yaml  canonicalisation.yaml  dataset.yaml  index.html  leakage.yaml  metadata.yaml  provenance.yaml
recipes/: index.html
reference/: index.html
scripts/: build_dev_dataset.py
search/: search_index.json
tests/: test_clustering.py  test_ingestion.py  test_partition.py  test_sequence_similarity.py
