[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandora"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
ingestion = [
    "gemmi>=0.6",
    "httpx>=0.27",
]
similarity = []
# requires mmseqs2 and foldseek binaries in PATH; install separately
annotations = [
    "freesasa>=2.1",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
full = [
    "pandora[ingestion,annotations,cli,dev]",
]

[project.scripts]
pandora = "pandora.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pandora"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Set the maximum line length to 80.
line-length = 80

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]