[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandora"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ingestion = [
    "gemmi>=0.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
]
similarity = []
# requires mmseqs2 and foldseek binaries in PATH; install separately
annotations = [
    "freesasa>=2.1",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
full = [
    "pandora[ingestion,annotations,cli,dev,docs]",
]

[project.scripts]
pandora = "pandora.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pandora"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Set the maximum line length to 80.
line-length = 80
extend-exclude = ["archive"]

[tool.ruff.lint]
# Pin the rule set explicitly rather than relying on Ruff's implicit
# "default" selection, which is not stable across Ruff versions (0.16
# silently pulled in dozens of rules, incl. BLE001/S110, that 0.15 did
# not enable). E4/E7/E9/F match the pre-0.16 default; BLE001 and S110
# are added deliberately to catch blind `except Exception` and silent
# `try/except/pass`.
select = ["E4", "E7", "E9", "F", "BLE001", "S110"]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
ignore = ["E501"]